hphp/test/slow/include-error1.php.expectf

Warning: include(non-existing-file.php): File not found in %s/include-error1.php on line 5

Warning: include(non-existing-file.php): File not found in %s/include-error1.php on line 6

Warning: include_once(non-existing-file.php): File not found in %s/include-error1.php on line 7

Warning: include_once(non-existing-file.php): File not found in %s/include-error1.php on line 8

Fatal error: require(non-existing-file.php): File not found in %s/include-error1.php on line 9
